--- a/pages/18783.html
+++ b/pages/18783.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      generalized scheme&quot;&gt;nLab:generalized in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      generalized scheme&quot;&gt;nLab:generalized
   </h1>
 
 
@@ -308,49 +308,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='num_remark' id='PresymplecticCurrentInterpretation'>
-<h6 id='remark'>Remark</h6>
-
-<p><strong>(<a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a> is local version of (<a class='existingWikiWord' href='/nlab/show/presymplectic+structure'>pre-</a>)<a class='existingWikiWord' href='/nlab/show/symplectic+manifold'>symplectic form</a> of <a class='existingWikiWord' href='/nlab/show/Hamiltonian+mechanics'>Hamiltonian mechanics</a>)</strong></p>
-
-<p>In the simple but very common situation of example \ref{CanonicalMomentum} the <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a> (def. \ref{EulerLagrangeOperatorForTivialVectorBundleOverMinkowskiSpacetime}) takes the form (eq:CanonicalMomentum)</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3a4160c00f36072d1896aa49ac157d802be24020_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Ω</mi> <mi>BFV</mi></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mi>δ</mi><msubsup><mi>p</mi> <mi>a</mi> <mi>μ</mi></msubsup><mo>∧</mo><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup><mo>∧</mo><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub></mrow><annotation encoding='application/x-tex'>
-  \Omega_{BFV}
-   \;=\;
-  \delta p_a^\mu
-  \wedge
-  \delta \phi^a
-  \wedge
-  \iota_{\partial_\mu} dvol_\Sigma
-
-</annotation></semantics></math></div>
-<p>with <math class='maruku-mathml' display='inline' id='mathml_3a4160c00f36072d1896aa49ac157d802be24020_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>\phi^a</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinates</a> (“<a class='existingWikiWord' href='/nlab/show/polarization'>canonical coordinates</a>”) and <math class='maruku-mathml' display='inline' id='mathml_3a4160c00f36072d1896aa49ac157d802be24020_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>p</mi> <mi>a</mi> <mi>μ</mi></msubsup></mrow><annotation encoding='application/x-tex'>p_a^\mu</annotation></semantics></math> the “<a class='existingWikiWord' href='/nlab/show/canonical+momentum'>canonical momentum</a>” (eq:CanonicalMomentumInCoordinates).</p>
-
-<p>Notice that this is of the schematic form “<math class='maruku-mathml' display='inline' id='mathml_3a4160c00f36072d1896aa49ac157d802be24020_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>δ</mi><msub><mi>p</mi> <mi>a</mi></msub><mo>∧</mo><mi>δ</mi><msup><mi>q</mi> <mi>a</mi></msup><mo>∧</mo><msub><mi>dvol</mi> <mrow><msub><mi>Σ</mi> <mi>p</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>\delta p_a \wedge \delta q^a \wedge dvol_{\Sigma_p}</annotation></semantics></math>”, which is reminiscent of a <a class='existingWikiWord' href='/nlab/show/symplectic+manifold'>symplectic form</a> expressed in <a class='existingWikiWord' href='/nlab/show/Darboux%27s+theorem'>Darboux coordinates</a> times a <a class='existingWikiWord' href='/nlab/show/volume+form'>volume form</a> for a <math class='maruku-mathml' display='inline' id='mathml_3a4160c00f36072d1896aa49ac157d802be24020_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-dimensional <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a>. Indeed, below in <em><a href='#PhaseSpace'>Phase space</a></em> we discuss that this <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a> <em><a class='existingWikiWord' href='/nlab/show/transgression+of+differential+forms'>transgresses</a></em> (def. \ref{TransgressionOfVariationalDifferentialFormsToConfigrationSpaces} below) to a <a class='existingWikiWord' href='/nlab/show/presymplectic+structure'>presymplectic form</a> of the schematic form “<math class='maruku-mathml' display='inline' id='mathml_3a4160c00f36072d1896aa49ac157d802be24020_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><msub><mi>P</mi> <mi>a</mi></msub><mo>∧</mo><mi>d</mi><msup><mi>Q</mi> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>d P_a \wedge d Q^a</annotation></semantics></math>” on the <span class='newWikiWord'>on shell<a href='/nlab/new/on+shell'>?</a></span> <a class='existingWikiWord' href='/nlab/show/space+of+trajectories'>space of field histories</a> (def. \ref{EulerLagrangeEquationsOnTrivialVectorFieldBundleOverMinkowskiSpacetime}) by <a class='existingWikiWord' href='/nlab/show/integration+of+differential+forms'>integrating</a> it over a <a class='existingWikiWord' href='/nlab/show/Cauchy+surface'>Cauchy surface</a>. In good situations this <a class='existingWikiWord' href='/nlab/show/presymplectic+structure'>presymplectic form</a> is in fact a <a class='existingWikiWord' href='/nlab/show/symplectic+manifold'>symplectic form</a> on the <a class='existingWikiWord' href='/nlab/show/shell'>on-shell</a> <a class='existingWikiWord' href='/nlab/show/space+of+trajectories'>space of field histories</a>, in a suitable sense (theorem \ref{PPeierlsBracket} below).</p>
-
-<p>This shows that the <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a> <math class='maruku-mathml' display='inline' id='mathml_3a4160c00f36072d1896aa49ac157d802be24020_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Ω</mi> <mi>BFV</mi></msub></mrow><annotation encoding='application/x-tex'>\Omega_{BFV}</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/local+quantum+field+theory'>local</a> (i.e. <a class='existingWikiWord' href='/nlab/show/jet+bundle'>jet level</a>) avatar of the <a class='existingWikiWord' href='/nlab/show/symplectic+manifold'>symplectic form</a> familiar from the formulation of <a class='existingWikiWord' href='/nlab/show/Hamiltonian+mechanics'>Hamiltonian mechanics</a> in terms of <a class='existingWikiWord' href='/nlab/show/symplectic+geometry'>symplectic geometry</a>:</p>
-
-<p>In fact prop. \ref{HorizontalDerivativeOfPresymplecticCurrentVanishesOnShell} may be read as saying that the <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a> is a <em><a class='existingWikiWord' href='/nlab/show/conserved+current'>conserved current</a></em> (def. \ref{SymmetriesAndConservedCurrents} below), only that it takes values not in <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth functions</a> of the field coordinates and jets, but in <a class='existingWikiWord' href='/nlab/show/variational+bicomplex'>variational 2-forms</a> on fields. There is a <a class='existingWikiWord' href='/nlab/show/charge+of+a+conserved+current'>conserved charge</a> associated with every <a class='existingWikiWord' href='/nlab/show/conserved+current'>conserved current</a> (prop. \ref{ConservedCharge} below) and the conserved charge associated with the <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a> will be seen to be the (<a class='existingWikiWord' href='/nlab/show/presymplectic+structure'>pre-</a>)<a class='existingWikiWord' href='/nlab/show/symplectic+manifold'>symplectic form</a> on the <a class='existingWikiWord' href='/nlab/show/phase+space'>phase space</a> of the field theory (def. \ref{PhaseSpaceAssociatedWithCauchySurface} below).</p>
-</div>
+    
 </div>
 
 <div class="revisedby">
-  Revised on November 17, 2017 13:37:09 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  Created on November 17, 2017 13:50:00 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (98.177.141.186)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1259" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1259 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/generalized+scheme%22%3EnLab%3Ageneralized" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/generalized+scheme%22%3EnLab%3Ageneralized" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/generalized+scheme%22%3EnLab%3Ageneralized" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/generalized+scheme%22%3EnLab%3Ageneralized" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
