--- a/pages/9232.html
+++ b/pages/9232.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1003,7 +1003,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbation theory</a> in <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a>, the edges in a the <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a> are traditionally thought of as indicating <a class='existingWikiWord' href='/nlab/show/particle'>particle</a> <a class='existingWikiWord' href='/nlab/show/worldvolume'>trajectories</a> of the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> of the given <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a>. However, this interpretation has its limits, not the least because these “particles” need not satisfy their <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a>. To indicate this one speaks of <strong>virtual particles</strong>.</p>
@@ -1020,19 +1020,37 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id='references'>References</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Arnold+Neumaier'>Arnold Neumaier</a>, <em><a href='https://www.physicsforums.com/insights/physics-virtual-particles/'>The Physics of Virtual Particles</a></em></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Arnold+Neumaier'>Arnold Neumaier</a>, <em><a href='https://www.physicsforums.com/insights/misconceptions-virtual-particles/'>Misconceptions about Virtual Particles</a></em></p>
+</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Virtual_particle'>Virtual particle</a></em></li>
+</ul>
+
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Created on January 24, 2013 13:26:49 
+  Revised on November 19, 2017 11:16:51 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.99.233)
+  (94.220.49.59)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/virtual+particle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/virtual+particle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/virtual+particle/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/virtual+particle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/virtual+particle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
