--- a/pages/4301.html
+++ b/pages/4301.html
@@ -314,24 +314,24 @@ margin-left: 0em;
 
 <h3 id='in_rings_and_algebras'>In rings and algebras</h3>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_30b41891156fe6af333ce3e8fe10e5f817503c20_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/ring'>ring</a> or <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>associative algebra</a>, the <strong>commutator</strong> of two elements <math class='maruku-mathml' display='inline' id='mathml_30b41891156fe6af333ce3e8fe10e5f817503c20_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>,</mo><mi>y</mi><mo>∈</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>x,y \in A</annotation></semantics></math> is the element</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_30b41891156fe6af333ce3e8fe10e5f817503c20_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>]</mo><mo>:</mo><mo>=</mo><mi>x</mi><mi>y</mi><mo>−</mo><mi>y</mi><mi>x</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  [x,y] := x y - y x
+<p>For <math class='maruku-mathml' display='inline' id='mathml_e2d7af8a91d67a3f6fce4952084ba9e20184ecc1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/ring'>ring</a> or <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>associative algebra</a>, the <strong>commutator</strong> of two elements <math class='maruku-mathml' display='inline' id='mathml_e2d7af8a91d67a3f6fce4952084ba9e20184ecc1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>,</mo><mi>y</mi><mo>∈</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>x,y \in A</annotation></semantics></math> is the element</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e2d7af8a91d67a3f6fce4952084ba9e20184ecc1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>]</mo><mo>≔</mo><mi>x</mi><mi>y</mi><mo>−</mo><mi>y</mi><mi>x</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  [x,y] \coloneqq x y - y x
   \,.
 
 </annotation></semantics></math></div>
 <h3 id='in_groups'>In groups</h3>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_30b41891156fe6af333ce3e8fe10e5f817503c20_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/group'>group</a>, the <strong>group commutator</strong> of two elements <math class='maruku-mathml' display='inline' id='mathml_30b41891156fe6af333ce3e8fe10e5f817503c20_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mo>,</mo><mi>b</mi><mo>∈</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>a,b \in G</annotation></semantics></math> is the element</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_30b41891156fe6af333ce3e8fe10e5f817503c20_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy='false'>]</mo><mo>:</mo><mo>=</mo><msup><mi>a</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><msup><mi>b</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mi>a</mi><mi>b</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  [a,b] := a^{-1} b^{-1} a b
+<p>For <math class='maruku-mathml' display='inline' id='mathml_e2d7af8a91d67a3f6fce4952084ba9e20184ecc1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/group'>group</a>, the <strong>group commutator</strong> of two elements <math class='maruku-mathml' display='inline' id='mathml_e2d7af8a91d67a3f6fce4952084ba9e20184ecc1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mo>,</mo><mi>b</mi><mo>∈</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>a,b \in G</annotation></semantics></math> is the element</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e2d7af8a91d67a3f6fce4952084ba9e20184ecc1_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>a</mi><mo>,</mo><mi>b</mi><mo stretchy='false'>]</mo><mo>≔</mo><msup><mi>a</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><msup><mi>b</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mi>a</mi><mi>b</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  [a,b] \coloneqq a^{-1} b^{-1} a b
   \,.
 
 </annotation></semantics></math></div>
 <h2 id='properties'>Properties</h2>
 
 <ul>
-<li>For <math class='maruku-mathml' display='inline' id='mathml_30b41891156fe6af333ce3e8fe10e5f817503c20_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> an <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>associative algebra</a>, the underlying <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> of <math class='maruku-mathml' display='inline' id='mathml_30b41891156fe6af333ce3e8fe10e5f817503c20_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> equipped with the commutator bracket is a <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_30b41891156fe6af333ce3e8fe10e5f817503c20_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mo stretchy='false'>[</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A,[-,-])</annotation></semantics></math>.</li>
+<li>For <math class='maruku-mathml' display='inline' id='mathml_e2d7af8a91d67a3f6fce4952084ba9e20184ecc1_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> an <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>associative algebra</a>, the underlying <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> of <math class='maruku-mathml' display='inline' id='mathml_e2d7af8a91d67a3f6fce4952084ba9e20184ecc1_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> equipped with the commutator bracket is a <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_e2d7af8a91d67a3f6fce4952084ba9e20184ecc1_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mo stretchy='false'>[</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>]</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A,[-,-])</annotation></semantics></math>.</li>
 </ul>
 
 <h2 id='related_concepts'>Related concepts</h2>
@@ -356,6 +356,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/associator'>associator</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+propagator'>commutator function</a></p>
+</li>
 </ul>
 
 <p>
@@ -363,14 +367,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  4, 2017 07:36:11 
+  Revised on November 19, 2017 15:20:31 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.49.59)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/commutator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/commutator/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/commutator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/commutator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/commutator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/commutator/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/commutator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/commutator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
