--- a/pages/10349.html
+++ b/pages/10349.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,18 +312,24 @@ margin-left: 0em;
 <li><a href='http://en.wikipedia.org/wiki/Gabriele_Veneziano'>Wikipedia entry</a></li>
 </ul>
 
+<h3 id='related_pages'>Related pages</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Veneziano+amplitude'>Veneziano amplitude</a></li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on September 10, 2013 21:34:26 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.169.114.243)
+  Revised on November 20, 2017 08:32:03 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (129.12.18.176)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gabriele+Veneziano" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Gabriele+Veneziano" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gabriele+Veneziano/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Gabriele+Veneziano" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gabriele+Veneziano" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
