--- a/pages/10346.html
+++ b/pages/10346.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -315,10 +315,10 @@ margin-left: 0em;
 <h2 id='writings'>Writings</h2>
 
 <ul>
-<li><em>Quark or Bootstrap: Triumph or Frustration for Hadron Physics</em>, Physics Today, May 1970 (<a href='https://pubarchive.lbl.gov/islandora/object/ir%3A144169/datastream/PDF/view'>web</a>)</li>
+<li id='QuarkOrBootstrap'><em>Quark or Bootstrap: Triumph or Frustration for Hadron Physics</em>, Physics Today, May 1970 (<a href='https://pubarchive.lbl.gov/islandora/object/ir%3A144169/datastream/PDF/view'>web</a>)</li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_d9bc092512b46416d0415de9490cf629194adc0f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_17feda4a1b7d9ed473d42dadca04cf1f3cd3158f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></li>
@@ -328,14 +328,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 15, 2017 18:37:47 
+  Revised on November 20, 2017 09:14:45 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.65.168)
+  (94.220.49.59)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Geoffrey+Chew" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Geoffrey+Chew/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Geoffrey+Chew" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Geoffrey+Chew" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Geoffrey+Chew" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Geoffrey+Chew/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Geoffrey+Chew" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Geoffrey+Chew" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
