--- a/pages/8208.html
+++ b/pages/8208.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1040,13 +1040,17 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/duality+in+physics'>duality in physics</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/magic+pyramid'>magic pyramid</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Zvi+Bern'>Zvi Bern</a>, <em><a href='http://relativity.livingreviews.org/open?pubNo=lrr-2002-5&amp;amp;page=articlesu5.html'>The KLT relations in field theory</a></em>, Living Reviews in Relativity</p>
+<p><a class='existingWikiWord' href='/nlab/show/Zvi+Bern'>Zvi Bern</a>, <em><a href='http://relativity.livingreviews.org/open?pubNo=lrr-2002-5&amp;page=articlesu5.html'>The KLT relations in field theory</a></em>, Living Reviews in Relativity</p>
 </li>
 
 <li>
@@ -1080,14 +1084,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 20, 2016 10:29:51 
+  Revised on November 20, 2017 14:14:14 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  (94.220.49.59)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/KLT+relations" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/KLT+relations/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/KLT+relations" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/KLT+relations" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/KLT+relations" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/KLT+relations/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/KLT+relations" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/KLT+relations" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
