--- a/pages/9224.html
+++ b/pages/9224.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -422,16 +422,16 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_cf33bf736de5ac6ba0bc0f73f293518492548b45_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>μ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X, \mu)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/measure+space'>measure space</a> of finite total measure <math class='maruku-mathml' display='inline' id='mathml_cf33bf736de5ac6ba0bc0f73f293518492548b45_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∫</mo> <mi>X</mi></msub><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\int_X \mu</annotation></semantics></math> and for <math class='maruku-mathml' display='inline' id='mathml_cf33bf736de5ac6ba0bc0f73f293518492548b45_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> an <a class='existingWikiWord' href='/nlab/show/measurable+function'>measurable function</a> on <math class='maruku-mathml' display='inline' id='mathml_cf33bf736de5ac6ba0bc0f73f293518492548b45_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, a <em><a class='existingWikiWord' href='/nlab/show/random+variable'>random variable</a></em>, then its <strong>expectation value</strong> is</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cf33bf736de5ac6ba0bc0f73f293518492548b45_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>f</mi><mo stretchy='false'>⟩</mo><mo>≔</mo><mfrac><mrow><msub><mo>∫</mo> <mi>X</mi></msub><mi>f</mi><mo>⋅</mo><mi>μ</mi></mrow><mrow><msub><mo>∫</mo> <mi>X</mi></msub><mi>μ</mi></mrow></mfrac><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_a3ecd680b7cf4b119f68b69cee9cfcf76263113a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>μ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X, \mu)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/measure+space'>measure space</a> of finite total measure <math class='maruku-mathml' display='inline' id='mathml_a3ecd680b7cf4b119f68b69cee9cfcf76263113a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∫</mo> <mi>X</mi></msub><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\int_X \mu</annotation></semantics></math> and for <math class='maruku-mathml' display='inline' id='mathml_a3ecd680b7cf4b119f68b69cee9cfcf76263113a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> an <a class='existingWikiWord' href='/nlab/show/measurable+function'>measurable function</a> on <math class='maruku-mathml' display='inline' id='mathml_a3ecd680b7cf4b119f68b69cee9cfcf76263113a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, a <em><a class='existingWikiWord' href='/nlab/show/random+variable'>random variable</a></em>, then its <strong>expectation value</strong> is</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a3ecd680b7cf4b119f68b69cee9cfcf76263113a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>f</mi><mo stretchy='false'>⟩</mo><mo>≔</mo><mfrac><mrow><msub><mo>∫</mo> <mi>X</mi></msub><mi>f</mi><mo>⋅</mo><mi>μ</mi></mrow><mrow><msub><mo>∫</mo> <mi>X</mi></msub><mi>μ</mi></mrow></mfrac><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \langle f\rangle
   \coloneqq
   \frac{\int_X f \cdot \mu}{\int_X \mu}
  \,.
 
 </annotation></semantics></math></div>
-<p>In terms of the <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> <math class='maruku-mathml' display='inline' id='mathml_cf33bf736de5ac6ba0bc0f73f293518492548b45_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>μ</mi> <mi>P</mi></msub><mo>≔</mo><mfrac><mn>1</mn><mrow><msub><mo>∫</mo> <mi>X</mi></msub><mi>μ</mi></mrow></mfrac><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\mu_P \coloneqq \frac{1}{\int_X \mu} \mu</annotation></semantics></math> this is simply the <a class='existingWikiWord' href='/nlab/show/integral'>integral</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cf33bf736de5ac6ba0bc0f73f293518492548b45_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>f</mi><mo stretchy='false'>⟩</mo><mo>=</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>f</mi><mo>⋅</mo><msub><mi>μ</mi> <mi>P</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>In terms of the <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> <math class='maruku-mathml' display='inline' id='mathml_a3ecd680b7cf4b119f68b69cee9cfcf76263113a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>μ</mi> <mi>P</mi></msub><mo>≔</mo><mfrac><mn>1</mn><mrow><msub><mo>∫</mo> <mi>X</mi></msub><mi>μ</mi></mrow></mfrac><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\mu_P \coloneqq \frac{1}{\int_X \mu} \mu</annotation></semantics></math> this is simply the <a class='existingWikiWord' href='/nlab/show/integral'>integral</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a3ecd680b7cf4b119f68b69cee9cfcf76263113a_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>f</mi><mo stretchy='false'>⟩</mo><mo>=</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>f</mi><mo>⋅</mo><msub><mi>μ</mi> <mi>P</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \langle f\rangle
   = 
  \int_X f \cdot \mu_P
@@ -446,6 +446,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a></p>
 </li>
 </ul>
@@ -455,14 +459,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 17, 2015 11:59:08 
+  Revised on November 21, 2017 12:25:46 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  (188.96.226.74)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/expectation+value" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/expectation+value/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/expectation+value" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/expectation+value" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/expectation+value" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/expectation+value/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/expectation+value" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/expectation+value" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
