--- a/pages/9267.html
+++ b/pages/9267.html
@@ -310,7 +310,9 @@ margin-left: 0em;
 <div id="revision">
     <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> a <a class='existingWikiWord' href='/nlab/show/correlator'>correlator</a> with <math class='maruku-mathml' display='inline' id='mathml_80eb815d890635e576e7c522b51c17141737d04d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> insertions is also called the <em><math class='maruku-mathml' display='inline' id='mathml_80eb815d890635e576e7c522b51c17141737d04d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-point function</em> of the given <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> a <a class='existingWikiWord' href='/nlab/show/correlator'>correlator</a> (<a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a>) with <math class='maruku-mathml' display='inline' id='mathml_2e20476824ebc126032576e02edbc57de4dc174c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> insertions is also called the <em><math class='maruku-mathml' display='inline' id='mathml_2e20476824ebc126032576e02edbc57de4dc174c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-point function</em> of the given <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a>.</p>
+
+<p>For 2-point functions see also at <em><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></em>, <em><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a></em> <em><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></em></p>
 
 <p>
 </p>
@@ -321,14 +323,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 12, 2013 23:32:11 
+  Revised on November 21, 2017 12:27:31 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (145.116.131.249)
+  (188.96.226.74)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/n-point+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/n-point+function/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/n-point+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/n-point+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/n-point+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/n-point+function/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/n-point+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/n-point+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
